<resources>
    <string name="app_name">PoliticalCompass</string>

    <!--    Landing page titles-->
    <string name="landingTitle">Political Compass</string>
    <string name="takeQuiz">Take Quiz</string>
    <string name="partyInfo">Parties</string>
    <string name="policyInfo">Policies</string>
    <string name="electorateInfo">Electorates</string>

    <!--    Quiz questions-->
    <string name="firstQuestion">Do you think poor people deserve to be poor?</string>
    <string name="secondQuestion">Do you think women should have the right to control their body?</string>
    <string name="thirdQuestion">Do you like war?</string>
    <string name="fourthQuestion">Should living be free?</string>

    <!--    Quiz responses-->
    <string name="sAgree">Strongly Agree</string>
    <string name="Agree">Agree</string>
    <string name="neutral">Neutral</string>
    <string name="disagree">Disagree</string>
    <string name="sDisagree">Strongly Disagree</string>
    <string name="next_button">Next</string>

    <!--    Party information text-->
    <string name="dropdownHint">Choose a party to display info</string>
    <string name="labourInfo">The New Zealand Labour Party (Rōpū Reipa o Aotearoa) currently leads the government. It is a centre-left political party, which describes its founding principle as democratic socialism. Labour formed in 1916 out of various socialist parties and trade unions and is the country\'s oldest political party still in existence. Labour has been in government six times and had ten leaders become prime ministers.</string>
    <string name="maoriInfor">The Māori Party (Te Pāti Māori) is a Māori-led and Māori-focussed party currently outside of parliament. It was formed in 2004 in a split from the Labour Party following the passing of the controversial Foreshore and Seabed Act. The party supported the fifth National Government from 2008, holding a number of cabinet portfolios, until its departure from parliament at the 2017 election. The party aims to uphold te Tiriti o Waitangi, achieve mana motuhake (self-determination) for whānau, hapū and iwi, and represent Māori with an independent voice. </string>
    <string name="greenInfo">The Green Party of Aotearoa New Zealand (Te Rōpu Kākāriki o Aotearoa, Niu Tīreni) is a left-wing party focused on environmental and social justice issues and honouring Te Tiriti o Waitangi. It currently supports the government through a confidence and supply agreement, and has three ministers outside of cabinet. The Green Party formed in 1990 from the Values Party and first entered Parliament in 1996 as a part of the Alliance. It stood candidates independently at the 1999 election, and supported the fifth Labour government from 1999 to 2002 and 2005 to 2008.</string>
    <string name="nationalInfor">The New Zealand National Party (Rōpū Nāhinara) is currently the main opposition party in parliament. A centre-right party, National tends to be economically liberal and socially conservative, promoting individual freedom, personal responsibility and competitive enterprise. National formed in 1936 as a combination of the Reform and United parties to oppose the growing labour movement. It has been in government five times and had eight leaders become prime minister.</string>
    <string name="actInfo">The ACT Party (Rōpū ACT) is a right-wing libertarian party that advocates free market policies and reducing the role of government. It currently has one seat in parliament. ACT was formed in 1994 from the Association of Consumers and Taxpayers by former National MP Derek Quigly and former Labour minister of finance Roger Douglas. It has had seats in parliament since 1996 and has held the Epsom electorate since 2005. ACT gave support to the fifth National government from 2008 to 2017 through a confidence and supply agreement.</string>
    <string name="garfieldInfo">The Garfield Party (Rōpū Garfield), affectionately known as the \'No Mondays Party\' is an anarcho-capatalist party that remains a fringe party within the New Zealand political system. Started in 1976, the party has been advocating for abolition of mondays within the current week, occasionally campaigning to overhauling the entire system, however they have had little success in this being taken up. The parties greatest political opponent, Odie, has played a big role in keeping the party out of governemnt for so many years. </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="policyTitle">Policy Info</string>
    <string name="environmentButton">Environment</string>
    <string name="housingButton">Housing</string>
    <string name="educationButton">Education</string>
    <string name="healthButton">Health</string>
    <string name="economyButton">Economy</string>
    <string name="infrastructureButton">Infrastructure</string>

    <string name="labourEnvironment">Default Labour Environment Text</string>
    <string name="labourHousing">Default Labour Housing Text</string>
    <string name="labourEducation">Default Labour Education Text</string>
    <string name="labourEconomy">Default Labour Economy Text</string>
    <string name="labourHealth">Default Labour Health Text</string>
    <string name="labourInfrastructure">Default Labour Infrastructure Text</string>

    <string name="nationalEnvironment">Default National Environment Text</string>
    <string name="nationalHousing">Default National Housing Text</string>
    <string name="nationalEducation">Default National Education Text</string>
    <string name="nationalEconomy">Default National Economy Text</string>
    <string name="nationalHealth">Default National Health Text</string>
    <string name="nationalInfrastructure">Default National Infrastructure Text</string>

    <string name="greenEnvironment">Default Green Environment Text</string>
    <string name="greenHousing">Default Green Housing Text</string>
    <string name="greenEducation">Default Green Education Text</string>
    <string name="greenEconomy">Default Green Economy Text</string>
    <string name="greenHealth">Default Green Health Text</string>
    <string name="greenInfrastructure">Default Green Infrastructure Text</string>

    <string name="actEnvironment">Default ACT Environment Text</string>
    <string name="actHousing">Default ACT Housing Text</string>
    <string name="actEducation">Default ACT Education Text</string>
    <string name="actEconomy">Default ACT Economy Text</string>
    <string name="actHealth">Default ACT Health Text</string>
    <string name="actInfrastructure">Default ACT Infrastructure Text</string>

    <string name="maoriEnvironment">Default Maori Environment Text</string>
    <string name="maoriHousing">Default Maori Housing Text</string>
    <string name="maoriEducation">Default Maori Education Text</string>
    <string name="maoriEconomy">Default Maori Economy Text</string>
    <string name="maoriHealth">Default Maori Health Text</string>
    <string name="maoriInfrastructure">Default Maori Infrastructure Text</string>


    <string-array name="parties">
        <item>Labour Party</item>
        <item>National Party</item>
        <item>Green Party</item>
        <item>ACT</item>
        <item>Māori Party</item>
    </string-array>

    <string name="filler">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Aenean sed adipiscing diam donec adipiscing. Proin nibh nisl condimentum id venenatis a condimentum vitae. Urna et pharetra pharetra massa massa ultricies. Enim diam vulputate ut pharetra sit. Fames ac turpis egestas maecenas pharetra convallis. Facilisi morbi tempus iaculis urna id volutpat lacus. Proin sagittis nisl rhoncus mattis. Tristique senectus et netus et malesuada fames ac turpis. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. Ornare suspendisse sed nisi lacus sed viverra tellus. Id consectetur purus ut faucibus pulvinar elementum integer. Tristique nulla aliquet enim tortor.

Ultricies mi quis hendrerit dolor magna eget. Lectus sit amet est placerat. Odio facilisis mauris sit amet massa vitae tortor condimentum. Consectetur adipiscing elit pellentesque habitant morbi tristique senectus et. Vivamus arcu felis bibendum ut tristique et. Suspendisse ultrices gravida dictum fusce ut placerat orci nulla pellentesque. Est sit amet facilisis magna. Dignissim cras tincidunt lobortis feugiat vivamus. Pellentesque pulvinar pellentesque habitant morbi tristique senectus et netus et. Pellentesque diam volutpat commodo sed egestas egestas fringilla. Donec enim diam vulputate ut pharetra sit. Dui vivamus arcu felis bibendum. Pulvinar mattis nunc sed blandit libero volutpat sed.

Odio eu feugiat pretium nibh ipsum consequat nisl. Vel facilisis volutpat est velit egestas dui id ornare arcu. Volutpat blandit aliquam etiam erat. Et ligula ullamcorper malesuada proin libero. Ornare suspendisse sed nisi lacus sed. Aliquam etiam erat velit scelerisque in dictum non. Sed viverra tellus in hac habitasse. Tellus orci ac auctor augue mauris augue neque. Ornare suspendisse sed nisi lacus. Curabitur gravida arcu ac tortor dignissim convallis. Nunc pulvinar sapien et ligula ullamcorper malesuada proin. Amet venenatis urna cursus eget nunc scelerisque. Condimentum vitae sapien pellentesque habitant morbi. Neque viverra justo nec ultrices dui sapien eget mi proin.

Ipsum suspendisse ultrices gravida dictum. Sagittis purus sit amet volutpat. Vitae tortor condimentum lacinia quis vel eros donec ac. Dolor morbi non arcu risus. Ultrices vitae auctor eu augue ut lectus arcu bibendum at. Purus viverra accumsan in nisl nisi scelerisque. Faucibus ornare suspendisse sed nisi lacus sed viverra. Risus ultricies tristique nulla aliquet enim. Amet mattis vulputate enim nulla aliquet porttitor lacus luctus accumsan. Eget sit amet tellus cras adipiscing enim. Eget nunc lobortis mattis aliquam faucibus. Lectus proin nibh nisl condimentum id venenatis a condimentum vitae. Proin libero nunc consequat interdum varius.

Cursus metus aliquam eleifend mi in nulla posuere sollicitudin. Volutpat est velit egestas dui id ornare arcu. Porttitor lacus luctus accumsan tortor posuere. Nunc aliquet bibendum enim facilisis gravida neque convallis a cras. Posuere morbi leo urna molestie at elementum. Diam maecenas sed enim ut sem viverra aliquet eget sit. Felis eget velit aliquet sagittis id consectetur. Sagittis aliquam malesuada bibendum arcu vitae. Tincidunt vitae semper quis lectus. Integer enim neque volutpat ac tincidunt vitae.</string>

    <!-- Preference Titles -->
    <string name="settings">Settings</string>
    <string name="theme_select">Theme Settings</string>
    <string name="language_select">Language Settings</string>

    <!-- Theme Preferences -->
    <string name="change_theme">Change Theme</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="light_mode">Light Mode</string>
    <string name="garfield_mode">Garfield Mode</string>

    <!-- Language Preferences -->
    <string name="language_change">Change Language</string>
    <string name="english_language">English</string>
    <string name="maori_language">Te Reo Maori</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="quiz_result_title">Quiz Result</string>
    <string name="redo_quiz">Redo Quiz</string>

</resources>