<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SettingsFragment"
    android:id="@+id/scrollView1"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <PreferenceCategory app:title="@string/theme_select">


        <ListPreference
            app:defaultValue="@string/light_mode"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:key="theme_radio"
            app:title="@string/change_theme"
            app:summary="Light Mode"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/language_select">

        <DropDownPreference
            app:title="@string/language_change"
            app:defaultValue="@string/english_language"
            app:key="language_dropdown"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:summary="English"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>