<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#09064E">

    <TextView
        android:id="@+id/policyTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/policyTitle"
        android:textColor="#FFFEFE"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.084" />

    <Button
        android:id="@+id/environmentButton"
        android:layout_width="160dp"
        android:layout_height="141dp"
        android:text="@string/environmentButton"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.322" />

    <Button
        android:id="@+id/housingButton"
        android:layout_width="160dp"
        android:layout_height="141dp"
        android:text="@string/housingButton"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.86"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.322" />

    <Button
        android:id="@+id/educationButton"
        android:layout_width="160dp"
        android:layout_height="141dp"
        android:layout_marginTop="16dp"
        android:text="@string/educationButton"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/environmentButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/environmentButton"
        app:layout_constraintTop_toBottomOf="@+id/environmentButton" />

    <Button
        android:id="@+id/economyButton"
        android:layout_width="160dp"
        android:layout_height="141dp"
        android:layout_marginTop="16dp"
        android:text="@string/economyButton"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/housingButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/housingButton"
        app:layout_constraintTop_toBottomOf="@+id/housingButton" />

    <Button
        android:id="@+id/infrastructureButton"
        android:layout_width="160dp"
        android:layout_height="141dp"
        android:layout_marginTop="20dp"
        android:text="@string/infrastructureButton"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/economyButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/economyButton"
        app:layout_constraintTop_toBottomOf="@+id/economyButton" />

    <Button
        android:id="@+id/healthButton"
        android:layout_width="160dp"
        android:layout_height="141dp"
        android:layout_marginTop="20dp"
        android:text="@string/healthButton"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/educationButton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/educationButton"
        app:layout_constraintTop_toBottomOf="@+id/educationButton" />

</androidx.constraintlayout.widget.ConstraintLayout>