<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgBlue"
    android:padding="16dp"
    tools:context=".QuizActivity">

    <TextView
        android:id="@+id/quiz_question"
        android:layout_width="398dp"
        android:layout_height="71dp"
        android:background="@drawable/my_button"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="sans-serif-light"
        android:lineSpacingExtra="8sp"
        android:text="@string/firstQuestion"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000000"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/radio_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="310dp"
        android:layout_height="450dp"
        android:background="@drawable/my_button"
        android:backgroundTint="#FBFBFB"
        android:paddingStart="40dp"
        android:paddingLeft="40dp"
        android:paddingTop="30dp"
        android:paddingEnd="40dp"
        android:paddingRight="40dp"
        android:paddingBottom="40dp"
        app:layout_constraintBottom_toTopOf="@+id/next_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quiz_question">

        <RadioButton
            android:id="@+id/strong_agree"
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:text="@string/sAgree" />

        <RadioButton
            android:id="@+id/agree"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:text="@string/Agree" />

        <RadioButton
            android:id="@+id/neutral"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:checked="false"
            android:text="@string/neutral" />

        <RadioButton
            android:id="@+id/disagree"
            android:layout_width="match_parent"
            android:layout_height="81dp"
            android:text="@string/disagree" />

        <RadioButton
            android:id="@+id/strong_disagree"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:text="@string/sDisagree" />

    </RadioGroup>

    <Button
        android:id="@+id/next_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="nextQuestion"
        android:text="Next"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_group" />

</androidx.constraintlayout.widget.ConstraintLayout>