<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".quizscreen1">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="311dp"
            android:layout_height="63dp"
            android:layout_marginStart="48dp"
            android:layout_marginBottom="16dp"
            android:text="@string/sAgree"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/radioButton7"
            app:layout_constraintEnd_toEndOf="@+id/radioButton7"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/radioButton7" />

        <RadioButton
            android:id="@+id/radioButton7"
            android:layout_width="311dp"
            android:layout_height="63dp"
            android:layout_marginStart="48dp"
            android:layout_marginBottom="16dp"
            android:text="@string/Agree"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/radioButton8"
            app:layout_constraintEnd_toEndOf="@+id/radioButton8"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/radioButton8" />

        <RadioButton
            android:id="@+id/radioButton8"
            android:layout_width="311dp"
            android:layout_height="63dp"
            android:layout_marginStart="48dp"
            android:layout_marginBottom="16dp"
            android:text="@string/neutral"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/radioButton9"
            app:layout_constraintEnd_toEndOf="@+id/radioButton9"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/radioButton9" />

        <RadioButton
            android:id="@+id/radioButton9"
            android:layout_width="311dp"
            android:layout_height="63dp"
            android:layout_marginStart="48dp"
            android:layout_marginBottom="12dp"
            android:text="@string/disagree"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/radioButton10"
            app:layout_constraintEnd_toEndOf="@+id/radioButton10"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/radioButton10" />

        <RadioButton
            android:id="@+id/radioButton10"
            android:layout_width="311dp"
            android:layout_height="63dp"
            android:text="@string/sDisagree"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="506dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="378dp"
            android:layout_height="53dp"
            android:layout_marginTop="92dp"
            android:background="@color/bgBlue"
            android:fontFamily="sans-serif-light"
            android:lineSpacingExtra="8sp"
            android:text="Do you agree with Plants?"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button2"
            android:layout_width="270dp"
            android:layout_height="42dp"
            android:background="@color/bgBlue"
            android:text="Submit"
            android:textColor="#000000"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.898" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>